configdir = /etc/sources
config_DATA = include.rc

formuladir = $(sysconfdir)/sources/formula
formula_DATA = allskydb.rc ameco.rc bibliographic.rc enronemail.rc ensemble.rc freebase.rc \
	gutenberg.rc hostipinfo.rc metafilter.rc musicbrainz.rc nlpstanford.rc openanc.rc \
	opendirectory.rc openlibrary.rc openstreetmap.rc planetaryclimate.rc \
	sanfrancisco.rc wordnet.rc worldbank.rc
